@@ -25,7 +25,6 @@
     <File name="./README" subtype="Code" buildaction="Nothing" />
     <File name="./alarm.mdp" subtype="Code" buildaction="Nothing" />
     <File name="./alarm.mds" subtype="Code" buildaction="Nothing" />
-    <File name="./alarm.schemas" subtype="Code" buildaction="Nothing" />
     <File name="./autogen.sh" subtype="Code" buildaction="Nothing" />
     <File name="./configure.ac" subtype="Code" buildaction="Nothing" />
     <File name="./src/Alarm.cs" subtype="Code" buildaction="Compile" />
@@ -35,6 +34,8 @@
     <File name="./BUGS" subtype="Code" buildaction="Nothing" />
     <File name="./TODO" subtype="Code" buildaction="Nothing" />
     <File name="./src/VolumeFade.cs" subtype="Code" buildaction="Compile" />
+    <File name="./data/alarm.schemas" subtype="Code" buildaction="Nothing" />
+    <File name="./src/SleepTimerConfigDialog.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
